--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@nebular/theme": "2.0.0-rc.9",
     "@ng-bootstrap/ng-bootstrap": "1.0.0",
     "@swimlane/ngx-charts": "7.0.1",
+    "angular-image-cropper": "^1.2.0",
     "angular-jwt": "^0.1.10",
     "angular-tree-component": "7.2.0",
     "angular2-chartjs": "0.4.1",
@@ -74,6 +75,7 @@
     "ng2-ckeditor": "1.1.13",
     "ng2-smart-table": "1.2.2",
     "ngx-echarts": "2.0.1",
+    "ngx-image-cropper": "^1.3.4",
     "node-sass": "^4.11.0",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
@@ -87,7 +89,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.11.3",
+    "@angular-devkit/build-angular": "^0.11.4",
     "@angular/cli": "6.0.0",
     "@angular/compiler-cli": "6.0.0",
     "@angular/language-service": "6.0.0",
